--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -3,8 +3,8 @@ name: 02 - Workflow Events
 on: 
   push:
   pull_request:
-  schedule:
-    - cron: '*/10 * * * *'
+  #schedule:
+  #  - cron: '*/10 * * * *'
   workflow_dispatch: 
 jobs:
   echo:
