--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -11,11 +11,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Setup Node
+      - name: Setup node
         uses: actions/setup-node@v4
-        with:
+        with: 
           node-version: '20.x'
-      - name: Install Dependencies
+      - name : Install Dependencies
         run: npm ci
-      - name: Run Unit Tests
-        run: npm run test
