--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: '[debug] Print start-up data'
         if: inputs.debug
         run: |
-          echo "Triggered by: "${{ github.event_name }}"
+          echo "Triggered by: ${{ github.event_name }}"
           echo "Branch: ${{ github.ref }}"
           echo "Commit SHA: ${{ github.SHA }}"
           echo "Runner OS: ${{ runner.OS }}"
